updating NEON methods in SI from docs

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -5608,6 +5608,24 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\WDXWAGUB\\S0169-5347(08)00127-4.html}
 }
 
+@article{macarthurFoliageProfileVertical1969,
+  title = {Foliage {{Profile}} by {{Vertical Measurements}}},
+  author = {MacArthur, Robert H. and Horn, Henry S.},
+  date = {1969},
+  journaltitle = {Ecology},
+  volume = {50},
+  number = {5},
+  pages = {802--804},
+  issn = {1939-9170},
+  doi = {10.2307/1933693},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.2307/1933693},
+  urldate = {2021-09-30},
+  abstract = {A technique is described for estimating a foilage profile in a forest by a combination of measurements over random lines of points: (1) counts of leaf contacts on a plumb line below a tripod, (2) sightings on the heights of lowest leaves over grids of points, and (3) the proportions of sky unobscured by leaves.},
+  langid = {english},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.2307/1933693},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\BRVURKWT\\1933693.html}
+}
+
 @article{macekMaximumAirTemperature2019,
   title = {Maximum Air Temperature Controlled by Landscape Topography Affects Plant Species Composition in Temperate Forests},
   author = {Macek, Martin and Kopecký, Martin and Wild, Jan},
@@ -7471,6 +7489,25 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\64FCGBGH\\Parker et al. - 2002 - Canopy light transmittance in Douglas-fir–western .pdf;C\:\\Users\\Me\\Zotero\\storage\\CMT3T2I5\\1660634.html}
 }
 
+@article{parkerCanopySurfaceStand2004,
+  title = {The Canopy Surface and Stand Development: Assessing Forest Canopy Structure and Complexity with near-Surface Altimetry},
+  shorttitle = {The Canopy Surface and Stand Development},
+  author = {Parker, Geoffrey G and Russ, Mary E},
+  date = {2004-02-23},
+  journaltitle = {Forest Ecology and Management},
+  volume = {189},
+  number = {1},
+  pages = {307--315},
+  issn = {0378-1127},
+  doi = {10.1016/j.foreco.2003.09.001},
+  url = {https://www.sciencedirect.com/science/article/pii/S0378112703004377},
+  urldate = {2021-09-30},
+  abstract = {A first-return laser rangefinder deployed from a low-flying helicopter provided inexpensive, repeatable, and high-resolution measurements of the shape of the outer forest canopy in stands of four successional stages on the Maryland coastal plain. The traces of canopy height in these stands revealed structural characteristics such as cover, maximum and mean heights which were consistent with corresponding ground measurements. Differences in the statistics on canopy structure corresponded to general developmental trends in these stands, including the development of maximum height and surface rugosity. Furthermore, some of the outer canopy statistics related to measures of internal organization, such as the shape of the foliage height profile and the leaf area index. These observations suggest that such measurements could be used readily to classify stand structure and developmental stage, and to deduce some aspects of internal organization of vegetation.},
+  langid = {english},
+  keywords = {Complexity,Forest structure,Fractal dimension,Laser altimetry,Leaf area density,Leaf area index,Outer canopy,Rugosity},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\N6DJ83NK\\Parker and Russ - 2004 - The canopy surface and stand development assessin.pdf;C\:\\Users\\Me\\Zotero\\storage\\DW6REK6V\\S0378112703004377.html}
+}
+
 @article{parkerConsequencesEnvironmentalHeterogeneity2019,
   title = {Consequences of Environmental Heterogeneity for the Photosynthetic Light Environment of a Tropical Forest},
   author = {Parker, Geoffrey G. and Fitzjarrald, David R. and Gonçalves Sampaio, Irene Cibelle},
@@ -9174,6 +9211,24 @@
   langid = {english}
 }
 
+@article{shaoHighThroughputAssessment2019,
+  title = {Towards High Throughput Assessment of Canopy Dynamics: The Estimation of Leaf Area Structure in {{Amazonian}} Forests with Multitemporal Multi-Sensor Airborne Lidar},
+  shorttitle = {Towards High Throughput Assessment of Canopy Dynamics},
+  author = {Shao, Gang and Stark, Scott C. and de Almeida, Danilo R. A. and Smith, Marielle N.},
+  options = {useprefix=true},
+  date = {2019-02-01},
+  journaltitle = {Remote Sensing of Environment},
+  volume = {221},
+  pages = {1--13},
+  issn = {0034-4257},
+  doi = {10.1016/j.rse.2018.10.035},
+  url = {https://www.sciencedirect.com/science/article/pii/S0034425718304899},
+  urldate = {2021-09-30},
+  abstract = {s Leaf area dynamics offer information about changes in forest biomass and canopy function critical to understanding the role of forests in the climate system and carbon cycle. Airborne small footprint lidar is a potential major source for the detection of variation in leaf area density (LAD), LAD vertical profiles, and total leaf area (leaf area index, LAI), from sites to regional scales. However, the sensitivities of lidar-based LAD and LAI estimation are not yet well known, particularly in dense forests, over landscape heterogeneity, sensor system, and survey differences, and through time. To address these questions, we compared 16 pairs of multitemporal airborne lidar surveys with four different laser sensors across six Amazon forest sites with resurvey intervals ranging from one to nine years. We tested whether the different laser sensors, and the pulse return density of laser sampling (variable between and within each survey) introduce systematic biases. Laser sensors created consistent biases that accounted for up to 18.20\% of LAD differences between surveys, but biases could be corrected with a simple regression approach. Lidar pulse return density had little appreciable bias impact when above 20 returns per m2. After correction, repeated mean and site maximum LAI estimates became significantly correlated (R2 \textasciitilde 0.8), while LAD profiles revealed site differences. Heterogeneity and change in LAD structure were detectable at the ecologically relevant 1/4 ha forest neighborhood grid scale, as evidenced by the high correlation of profile variation between surveys, with the strength of correlation (R2 value) significantly decreasing with increasing survey interval (0.74 to 0.16 from one to nine years), consistent with accumulating effects of forest dynamics. Sensor-induced biases trended towards correlation with lidar footprint (beam width). The LAD estimation and bias correction approach developed in this study provides the standardization critical for heterogeneous lidar networks that offer high throughput functional ecological monitoring of climatically important forests like the Amazon.},
+  langid = {english},
+  keywords = {Forest degradation,Forest dynamics,LAI,Leaf area estimation,Leaf area profiles,Lidar,Tropical forest monitoring}
+}
+
 @article{sharkeyEffectsModerateHeat2005,
   title = {Effects of Moderate Heat Stress on Photosynthesis: Importance of Thylakoid Reactions, Rubisco Deactivation, Reactive Oxygen Species, and Thermotolerance Provided by Isoprene},
   shorttitle = {Effects of Moderate Heat Stress on Photosynthesis},
@@ -9783,6 +9838,26 @@
   url = {http://www.journals.uchicago.edu/doi/abs/10.1086/284930},
   urldate = {2021-03-29},
   abstract = {Most trees in northern-temperate or boreal forests are either needle-leaved and evergreen or broad-leaved and deciduous. Needle-leaved deciduous trees or broad-leaved evergreens exist but are much less common. It is suggested that evergreenness and needle leaves go together because small, needle-shaped leaves can readily be displayed in a pattern that disperses the incoming light over a larger number of leaves, which increases total photosynthesis by reducing the energy wastage that occurs when light energy falls on leaves that are already light-saturated. This strategy is most effective for trees that retain their leaves for several years and develop a deep canopy with many layers of leaves, in which light passing through the first few layers is captured by leaves deeper in the canopy. Since low temperatures reduce photosynthesis more in light-saturated leaves than in unsaturated leaves, mechanisms that minimize saturation are especially important for trees that may carry out substantial photosynthesis at low temperatures. For deciduous trees, however, broad leaves displayed more or less perpendicular to the sun are more advantageous, since they intercept more light with fewer layers of leaves, reducing the biomass of leaves that needs to be produced each year.}
+}
+
+@article{starkAmazonForestCarbon2012,
+  title = {Amazon Forest Carbon Dynamics Predicted by Profiles of Canopy Leaf Area and Light Environment},
+  author = {Stark, Scott C. and Leitold, Veronika and Wu, Jin L. and Hunter, Maria O. and de Castilho, Carolina V. and Costa, Flávia R. C. and McMahon, Sean M. and Parker, Geoffrey G. and Shimabukuro, Mônica Takako and Lefsky, Michael A. and Keller, Michael and Alves, Luciana F. and Schietti, Juliana and Shimabukuro, Yosio Edemir and Brandão, Diego O. and Woodcock, Tara K. and Higuchi, Niro and de Camargo, Plinio B. and de Oliveira, Raimundo C. and Saleska, Scott R.},
+  options = {useprefix=true},
+  date = {2012},
+  journaltitle = {Ecology Letters},
+  volume = {15},
+  number = {12},
+  pages = {1406--1414},
+  issn = {1461-0248},
+  doi = {10.1111/j.1461-0248.2012.01864.x},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1461-0248.2012.01864.x},
+  urldate = {2021-09-30},
+  abstract = {Tropical forest structural variation across heterogeneous landscapes may control above-ground carbon dynamics. We tested the hypothesis that canopy structure (leaf area and light availability) – remotely estimated from LiDAR – control variation in above-ground coarse wood production (biomass growth). Using a statistical model, these factors predicted biomass growth across tree size classes in forest near Manaus, Brazil. The same statistical model, with no parameterisation change but driven by different observed canopy structure, predicted the higher productivity of a site 500 km east. Gap fraction and a metric of vegetation vertical extent and evenness also predicted biomass gains and losses for one-hectare plots. Despite significant site differences in canopy structure and carbon dynamics, the relation between biomass growth and light fell on a unifying curve. This supported our hypothesis, suggesting that knowledge of canopy structure can explain variation in biomass growth over tropical landscapes and improve understanding of ecosystem function.},
+  langid = {english},
+  keywords = {Biomass growth,carbon balance,gap fraction,leaf area profiles,LiDAR,remote sensing of canopy structure},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1461-0248.2012.01864.x},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\UQ49GX9N\\Stark et al. - 2012 - Amazon forest carbon dynamics predicted by profile.pdf;C\:\\Users\\Me\\Zotero\\storage\\8DF94DN6\\j.1461-0248.2012.01864.html}
 }
 
 @article{starkenburgTemperatureRegimesTurbulent2015,
