--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -423,7 +423,7 @@ In the field of dendrochronology, it is generally accepted that tree ring record
 However, only a relatively limited number of studies have directly examined drought- or temperature-sensitivities as a function of tree size.
 These have generally found greater sensitivity to low precipitation or seasonally high temperatures among larger, more exposed trees [Fig. `r fig_treerings`, @trouillierSizeMattersComparison2018; @gillerotTreeNeighbourhoodDiversity2020; @mcgregorTreeHeightLeaf2021], corroborating evidence from globally disurbed forest censuses that larger trees tend to undergo larger growth declines during drought [@bennettLargerTreesSuffer2015]. 
 In addition to lower drought resistance of growth, larger trees frequently exhibit lower ability to recover from stress [i.e., resilience, @mcgregorTreeHeightLeaf2021; @gillerotTreeNeighbourhoodDiversity2020], and greater increases in mortality [@bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019].
-Mechanistically, this is almost certainly driven in part by the fact that larger trees have their crowns in a microenvironment that is more challenging during drought [Figs. `r schematic` - `r fig_leaf_T`, @scharnweberConfessionsSolitaryOaks2019], yet there is also reason to believe that height itself provides disadvantages [@olsonPlantHeightHydraulic2018; @couvreurWaterTransportThrough2018].  
+Mechanistically, this is almost certainly driven in part by the fact that larger trees have their crowns in a microenvironment that is more challenging during drought [Figs. `r fig_schematic` - `r fig_leaf_T`, @scharnweberConfessionsSolitaryOaks2019], yet there is also reason to believe that height itself provides disadvantages [@olsonPlantHeightHydraulic2018; @couvreurWaterTransportThrough2018].  
 Indeed, despite the potential for shorter trees in open forests to experience greater environmental stress [@curtis_intracanopy_2019], greater drought sensitivity of larger trees has been observed in open as well as closed-canopy forests [@bennettLargerTreesSuffer2015; @anderson-teixeiraCarbonCyclingMature2021], supporting the latter concept.
 The relative importance of exposure versus height in shaping drought sensitivity remains to be disentangled.
 
@@ -456,7 +456,7 @@ Further research is required to better understand the thermal sensitivity of for
 
 # III.  Implications
 
-Having established how physical conditions and biological form and function vary across vertical gradients (Fig. `r schematic`), we now turn attention to the implications of these patterns for our understanding of how forest ecosystems may be impacted by global change, and our ability to project this across space and time.
+Having established how physical conditions and biological form and function vary across vertical gradients (Fig. `r fig_schematic`), we now turn attention to the implications of these patterns for our understanding of how forest ecosystems may be impacted by global change, and our ability to project this across space and time.
 
 
 ## Global change responses
@@ -465,17 +465,20 @@ The complex interwoven relations between the biophysical environment and biologi
 
 ### Warming
 
-As climate change progresses, we anticipate increases in both mean daytime and nighttime $T_{air}$, as well as increased $T_{max}$s, with extreme increases during heat waves.
-These changes will impact leaf metabolism and ecosystem, and, over longer time frames, forest structure, composition, and leaf trait distributions. 
-Our in-depth review sheds some light as to how responses are likely to vary across forest vertical gradients, yet numerous questions remain.
+As climate change progresses, we anticipate increases in both mean daytime and nighttime $T_{air}$, as well as increased $T_{max}$s, with extreme increases during heat waves (**CITE LATEST IPCC**).
+These changes will impact leaf and ecosystem gas exchange with the atmosphere, and, over longer time frames, forest structure, composition, and leaf trait distributions. 
+Our in-depth review sheds some light as to how responses are likely to vary across forest vertical gradients, yet important uncertainties remain.
 
-Leaf level $T_{opt}$ is closely related to the $T_{opt}$ of ecosystem photosynthesis ($T_{optE}$). 
-Temperature limitations to leaf processes, such as VPD and $g_s$ limitation, can modify $T_{optE}$ if species do not acclimate, resulting in reduced carbon sequestration [@huangAirTemperatureOptima2019; @wayJustRightTemperature2019; @tanOptimumAirTemperature2017; @bennettThermalOptimaGross2021]. 
-At a metabolism level, leaf photosynthesis and respiration are coupled to photosynthetic thermal optima. 
+To the extent that warming is coupled to drought, we expect that the largest trees will usually be hardest-hit, at least in part because their crowns are positioned in a more challenging microenvironment (**FIGS, REFS**).
+*Unknown: Is there a difference between soil  drought and atmospheric drought, with the most extreme case being a heat wave under well-watered conditions?*
+
+What remains poorly understood is how responses to warming will vary across vertical gradients under mesic conditions. 
+The leaf-level responses are relatively well-understood: at the metabolic level, photosynthesis and respiration are coupled to photosynthetic thermal optima, which reflect adapation to the local climate but do not vary consistently with height in the canopy (see section 4.2, Table 2). 
 Beyond this inflection point, photosynthesis declines whereas respiration continues to increase exponentially, eventually shifting the carbon balance from sink to source, independent of water and irradiance [@duffyHowCloseAre2021]. 
-Exposed canopies are likely most vulnerable, as current growing season temperatures are equal to, or higher than photosynthetic optima of temperate and tropical forests [@slotSituTemperatureResponse2017; @mauTemperateTropicalForest2018; @huangAirTemperatureOptima2019; @kumarathungeAcclimationAdaptationComponents2019], and leaf temperatures may  approach lethal temperatures [e.g., @osullivanThermalLimitsLeaf2017; @tiwariPhotosyntheticQuantumEfficiency2021]. 
-Thermal limits are especially narrow in tropical and mid-latitudes forests [@osullivanThermalLimitsLeaf2017]. 
-A daytime temperature threshold of 32$^\circ$C has been suggested for long term climate sensitivity of global tropical forests, where reduced growth and increased drought and tree mortality will lead to increased carbon source than sink [@sullivanLongtermThermalSensitivity2020].
+While leaves display substantial plasticity to adapt to warmer temperatures (**REFS**), failure to fully acclimate will result in reduced carbon sequestration at leaf and ecosystem levels [@huangAirTemperatureOptima2019; @wayJustRightTemperature2019; @tanOptimumAirTemperature2017; @bennettThermalOptimaGross2021]. 
+Exposed canopies are likely most vulnerable, as growing season $T_{air}$ is increasingly equaling or exceeding photosynthetic optima [@slotSituTemperatureResponse2017; @mauTemperateTropicalForest2018; @huangAirTemperatureOptima2019; @kumarathungeAcclimationAdaptationComponents2019]. 
+Particularly in mid-latitude forests, which have the narrowest thermal safety margin between historical maximum temperatures and leaf thermal tolerance levels [@osullivanThermalLimitsLeaf2017], $T_{leaf}$ of sun-exposed leaves may often approach thermal tolerance thresholds, resulting in photosynthetic decline or even leaf death [e.g., @osullivanThermalLimitsLeaf2017; @tiwariPhotosyntheticQuantumEfficiency2021] (**KUNERT, in press**). 
+
 
 Although understory leaves are unlikely to face the same absolute extremes of $T_{leaf}$, they will also be affected by higher $T_{air}$, and in some ways are likely to prove more sensitive.
 A buffering effect from the canopies might allow shaded layers to photosynthesize longer in the day [@millerOnlySunlitLeaves2021; @heChangesShadowShifting2018], especially if RH in the understory does not inhibit transpirational cooling [Fig `r fig_treerings`, @rollinsonClimateSensitivityUnderstory2020].
