--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -6949,7 +6949,7 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\IVA758DK\\Niinemets - 2007 - Photosynthesis and resource distribution through p.pdf;C\:\\Users\\Me\\Zotero\\storage\\AJYLGZFK\\j.1365-3040.2007.01683.html}
 }
 
-@article{niinemetsPhotosyntheticAcclimationSimultaneous2004b,
+@article{niinemetsPhotosyntheticAcclimationSimultaneous2004,
   title = {Photosynthetic {{Acclimation}} to {{Simultaneous}} and {{Interacting Environmental Stresses Along Natural Light Gradients}}: Optimality and {{Constraints}}},
   shorttitle = {Photosynthetic {{Acclimation}} to {{Simultaneous}} and {{Interacting Environmental Stresses Along Natural Light Gradients}}},
   author = {Niinemets, Ü and Valladares, F.},
@@ -6965,8 +6965,7 @@
   abstract = {Abstract: There is a strong natural light gradient from the top to the bottom in plant canopies and along gap-understorey continua. Leaf structure and photosynthetic capacities change close to proportionally along these gradients, leading to maximisation of whole canopy photosynthesis. However, other environmental factors also vary within the light gradients in a correlative manner. Specifically, the leaves exposed to higher irradiance suffer from more severe heat, water, and photoinhibition stresses. Research in tree canopies and across gap-understorey gradients demonstrates that plants have a large potential to acclimate to interacting environmental limitations. The optimum temperature for photosynthetic electron transport increases with increasing growth irradiance in the canopy, improving the resistance of photosynthetic apparatus to heat stress. Stomatal constraints on photosynthesis are also larger at higher irradiance because the leaves at greater evaporative demands regulate water use more efficiently. Furthermore, upper canopy leaves are more rigid and have lower leaf osmotic potentials to improve water extraction from drying soil. The current review highlights that such an array of complex interactions significantly modifies the potential and realized whole canopy photosynthetic productivity, but also that the interactive effects cannot be simply predicted as composites of additive partial environmental stresses. We hypothesize that plant photosynthetic capacities deviate from the theoretical optimum values because of the interacting stresses in plant canopies and evolutionary trade-offs between leaf- and canopy-level plastic adjustments in light capture and use.},
   langid = {english},
   keywords = {Humidity,leaf temperature,light availability,photoinhibition,photosynthesis acclimation,plasticity,stress,vapour pressure deficit},
-  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1055/s-2004-817881},
-  file = {C\:\\Users\\Me\\Zotero\\storage\\UVPL5KVU\\Niinemets and Valladares - 2004 - Photosynthetic Acclimation to Simultaneous and Int.pdf;C\:\\Users\\Me\\Zotero\\storage\\KT2H8APW\\s-2004-817881.html}
+  file = {C\:\\Users\\Me\\Zotero\\storage\\YQEWMG5C\\Niinemets and Valladares - 2004 - Photosynthetic Acclimation to Simultaneous and Int.pdf;C\:\\Users\\Me\\Zotero\\storage\\YHN7F5CQ\\s-2004-817881.html}
 }
 
 @article{niinemetsResearchReviewComponents1999,
@@ -6983,6 +6982,24 @@
   urldate = {2020-08-02},
   langid = {english},
   file = {C\:\\Users\\Me\\Zotero\\storage\\VXB7RIMV\\Niinemets - 1999 - Research review. Components of leaf dry mass per a.pdf}
+}
+
+@article{niinemetsResponsesForestTrees2010,
+  title = {Responses of Forest Trees to Single and Multiple Environmental Stresses from Seedlings to Mature Plants: Past Stress History, Stress Interactions, Tolerance and Acclimation},
+  shorttitle = {Responses of Forest Trees to Single and Multiple Environmental Stresses from Seedlings to Mature Plants},
+  author = {Niinemets, Ülo},
+  date = {2010-10},
+  journaltitle = {Forest Ecology and Management},
+  volume = {260},
+  number = {10},
+  pages = {1623--1639},
+  issn = {03781127},
+  doi = {10.1016/j.foreco.2010.07.054},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S0378112710004743},
+  urldate = {2020-08-02},
+  abstract = {Forest trees are exposed to a myriad of single and combined stresses with varying strength and duration throughout their lifetime, and many of the simultaneous and successive stress factors strongly interact. While much progress has been achieved in understanding the effects of single stresses on tree performance, multiple interacting stress effects cannot be adequately assessed from combination of single factor analyses. In particular, global change brings about novel combinations of severity and timing of different stresses, the effects of which on tree performance are currently hard to predict. Furthermore, the combinations of stresses commonly sustained by trees change during tree ontogeny. In addition, tree photosynthesis and growth rates decline with increasing tree age and size, while support biomass in roots, stem and branches accumulates and the concentrations of non-structural carbohydrates increase, collectively resulting in an enhancement of non-structural carbon pools. In this review, tree physiological responses to key environmental stress factors and their combinations are analyzed from seedlings to mature trees. The key conclusions of this analysis are that combined stresses can influence survival of large trees even more than chronic exposure to a single predictable stress such as drought. In addition, tree tolerance to many environmental stresses increases throughout the ontogeny as the result of accumulation of non-structural carbon pools, implying major change in sensing, response and acclimation to single and multiple stresses in trees of different size and age.},
+  langid = {english},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\NPDV769Y\\Niinemets - 2010 - Responses of forest trees to single and multiple e.pdf}
 }
 
 @article{niinemetsResponsesForestTrees2010a,
